[gd_scene load_steps=2 format=3 uid="uid://v7txhto270sl"]

[ext_resource type="Script" path="res://GDScript/MenuScript/MainControl.gd" id="1_r62ga"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_r62ga")

[node name="WelcomeText" type="Label" parent="Control"]
layout_mode = 0
offset_left = 464.0
offset_top = 152.0
offset_right = 697.0
offset_bottom = 175.0
text = "Welcome to Carbon Control"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 486.0
offset_top = 210.0
offset_right = 676.0
offset_bottom = 253.0
text = "Continue"

[node name="LeaveButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 485.0
offset_top = 369.0
offset_right = 675.0
offset_bottom = 412.0
text = "Leave the game"

[node name="SettingsButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 485.0
offset_top = 316.0
offset_right = 675.0
offset_bottom = 359.0
text = "Settings"

[node name="CreditsButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 951.0
offset_top = 11.0
offset_right = 1141.0
offset_bottom = 54.0
text = "Credits"

[node name="NewGameButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 485.0
offset_top = 263.0
offset_right = 675.0
offset_bottom = 306.0
text = "New Game"
